<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/header" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/txt_search"
                android:layout_width="match_parent"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/laySearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_border"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/txt_search_article"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/next"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <TextView
                android:text="@string/txt_popular"
                android:layout_width="match_parent"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/layView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_border"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/txt_most_viewed"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/next"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_border"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/txt_most_shared"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/next"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_border"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/txt_most_emailed"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_10sdp"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/next"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>